# MND-Protocol

./: Makefile  README.md
.cargo/: .global-cache
sidecar/: Cargo.toml
sidecar/.cargo/: .global-cache
sidecar/.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: js-sys-0.3.88.crate  wasm-bindgen-0.2.111.crate  wasm-bindgen-futures-0.4.61.crate  wasm-bindgen-macro-0.2.111.crate  wasm-bindgen-macro-support-0.2.111.crate  wasm-bindgen-shared-0.2.111.crate
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/c/: ctr
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/f/: fs2
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/r/: rlp
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/as/ci/: ascii-canvas
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/as/yn/: async_io_stream
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/be/ch/: bech32
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/by/te/: byte-slice-cast
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ci/ph/: cipher
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/co/ns/: const-hex
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/cr/yp/: crypto-bigint
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/do/te/: dotenv
sidecar/.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/el/li/: elliptic-curve
sidecar/src/: main.rs  packer.rs  sender.rs
(+79 files in other folders)
