[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full", "rt-multi-thread"] }
zstd = "0.13"
hex = "0.4"
ethers = "2.0.14"
dotenv = "0.15"
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["cors"] }
